Fixed the overflow scrolling

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -110,7 +110,6 @@ header.banner {
 
     #mainNavigation {
       clear: both;
-      overflow: scroll;
 
       .nav {
         >li {
